@startuml
class ph.edu.dlsu.PHFlag {
+ void run()
+ {static} void main(String[])
+ void addBlue()
+ void addRed()
+ void addStars()
+ void addSun()
+ void addName()
}

class ph.edu.dlsu.GStar{
+ GStar(double size)
+ GStar(double x, double y, double size)
}


acm.program.GraphicsProgram <|-- ph.edu.dlsu.PHFlag
ph.edu.dlsu.PHFlag *-- ph.edu.dlsu.GStar
@enduml